[package]
name = "rust-axum-sqlx-redis-ws-template"
version = "0.1.0"
edition = "2021"
description = "Rust+Axum+Sqlx+Redis+Postgres Web Service Template"
authors = ["Kris <krzysztof.grajek@softwaremill.com>"]

[dependencies]
axum = { version = "*", features = ["macros"] }
serde = { version = "*", features = ["derive"] }
serde_json = "*"
tokio = { version = "*", features = ["full"] }
bb8-redis = "*"
redis = "*"
sqlx = { version = "*", features = ["runtime-tokio-rustls", "any", "postgres"] }
tracing = "*"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
dotenv = "*"
tower = { version = "*", features = ["util"] }
tower-http = { version = "*", features = ["trace", "cors"] }
utoipa = { version = "*", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "*", features = ["axum"] }
utoipa-axum = { version = "*" }
utoipa-redoc = { version = "*", features = ["axum"] }
utoipa-rapidoc = { version = "*", features = ["axum"] }
utoipa-scalar = { version = "*", features = ["axum"] }
anyhow = "*"
async-trait = "*"
thiserror = "*"
mockall = "*"
once_cell = "*"
hyper = "*"
